--- a/Indicators.html
+++ b/Indicators.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -221,7 +221,7 @@
                     Responsive block with counters and media. 
                 </h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background612.jpg">
+                    <img src="assets/images/background620.jpg">
                 </div>
             </div>
             <div class="cards-block">
@@ -852,7 +852,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo214.png" alt="Mobirise">
+                        <img src="assets/images/logo222.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
