--- a/Social.html
+++ b/Social.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -279,7 +279,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZGYSouM0WOaVihAt/SM9vjC3mXgjaiqsrvkq1Ic2mITwac9hHZtfJwRAQBmYQ5i5UgJtr+imvDFRKy9QLgrCX9CbTguNR0hbiEyvF9toymWSD7HluqHVR6LOt28ZGHpu.GuSk9GNPkV8nkgKN7KX6u7Af4IycjQ9PHdtn6GIU6+5TlC1Qa4tZnVK4aBlVk3PXUe+zvFATfncHy3PDlKi4kLnCJGc9xRD5yPQTbHOoFVXoJO5zoPBXaBc1inO3eHWG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rQShsO1cEtaK06mlCY3COn7MG2nOY/51W9ZGdat3Y8YjvUenBs2LKqUjTv1pES5aZujFn/2Q6WBwdbAi0/0QZ1Pwu+4yRXYJBoxE61qr7lxNi/3Rnvwsure9Ag5142I+.M/xCBCcYjQEe5HoxIdBAq+LUXttNulN+m5Qq5q6cqwrZ60q9SHQMKQ/vhkOLFhO7TVnd6HXF1JlFgPAvCLf2ff3ehAvJz2zkPYazoT4uOV6nF+mqgVei1ZKYpZ+bFtxn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
