--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="O3cfiALtfNyhX1tpAjViRqilZZknSUkc8WIS/ibXzXlpP8rikdW9p1++k1iKykDLL/V/YPHWn5hHftxkbLQ28ztfDUfGGlcVcMrff5epcubyyRe1qNSBPcPy7JYxFG26.0UR9n/nnXBskkti0m1otdKfNSt+NuWwTEyWATUEVoOEwP9EgtIa+7gVdtJmz8Fu8So37bpu32sDD/T/n1uo+V/DfqXoF3LSOaIPEHAH7jFEvrjlHnxZgChA3ZJC9IU8G">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5dEjy47pm1Tsoyjzz94yD1OudFmdlakrdDs5EWQ3rPpjxAuJmHtlGh4vNbhTIj6ual2gTVIDgmFsG/+CpmdcQPtpw01CuhT+HLhUxZ4JrRLBshk3vLVVUJQqvyGE5Byp.50EyB13OTQN8yt3J0zH+5pxn6/d6zPBty1nBTIcXknv+yu8tPe3Y50vJ/uI+D1fYo8NCUIaRYSfbDzFWy0ZTZMRe3AX+bq4I4VfRYBRwYx3FW5U7D1Dr7kzsvp1QL7Uk">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
