--- a/training.html
+++ b/training.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
